# esp32_wifi_manager

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  idf_component.yml  install.sh  wifi_manager.h
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
examples/advanced_features/: README.md  advanced_features.c
examples/basic_usage/: README.md  basic_usage.c
src/: wifi_manager_api.c  wifi_manager_config.c  wifi_manager_core.c  wifi_manager_private.h  wifi_manager_scan.c  wifi_manager_storage.c  wifi_manager_web.c
web/: config.html  script.js  setup.html  style.css  success.html
